# sphereview

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md  build.rs  io.github.dynobo.sphereview.appdata.xml  io.github.dynobo.sphereview.desktop
.github/workflows/: cicd.yaml
resources/: com.github.dynobo.sphereview.gresource  com.github.dynobo.sphereview.gresource.xml  io.github.dynobo.sphereview.gresource.xml
resources/data/: shortcuts.blp  window.blp
resources/photosphereviewer/: index.html  package-lock.json  package.json  vite.config.js
resources/photosphereviewer/src/: style.css  viewer.js
src/: app.rs  assets.rs  image.rs  lib.rs  main.rs  shortcuts_dialog.rs  window.rs
tests/: version_consistency.rs
